Resolved text overflow issue on service page

--- a/pkg/systemd/service-details.scss
+++ b/pkg/systemd/service-details.scss
@@ -33,6 +33,10 @@
   margin-right: 0.5em;
 }
 
+.service-top-panel {
+  flex-wrap: nowrap;
+}
+
 /* Rely on flex for spacing only */
 #service-actions button {
   padding-left: 0;
